--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d -watch"
+    "build": "webpack -d -watch",
+    "start": "nodemon server/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "express": "^4.17.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.3.0"
   }
