Completed setting state of teams data and teams table component in progress

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.3.0"
   }
