--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "styled-components": "^5.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.3.0"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
